# yamlconverter

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.it.md  README.md  pyproject.toml  requirements.txt  run.py  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build.yml
docs/: BUILD_INSTRUCTIONS.it.md  BUILD_INSTRUCTIONS.md  BUILD_INSTRUCTIONS_LINUX.it.md  BUILD_INSTRUCTIONS_LINUX.md  REORGANIZATION_PHASE2.it.md  REORGANIZATION_PHASE2.md
examples/: secrets.rlist.example.xlsx  secrets.rlist.example.yml
icons/: README.md
scripts/: build.bat  build_appimage.sh  build_exe.spec  build_linux.spec  generate_icon.py  pyi_rth_tkinterdnd2.py  version_info.txt
scripts/hooks/: hook-tkinterdnd2.py
src/yamlconverter/: __init__.py  __main__.py
src/yamlconverter/converters/: __init__.py  custom_excel_to_yaml.py  custom_yaml_to_excel.py
src/yamlconverter/gui/: main.py
src/yamlconverter/utils/: gpg_utils.py  i18n.py
tests/: TEST_STATUS.md
tests/test_converters/: __init__.py  test_excel_to_yaml.py  test_yaml_to_excel.py
tests/test_utils/: test_gpg_utils.py  test_i18n.py
translations/: en.json  it.json
